--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Xiaonan LUO / Personal Website"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Xiaonan LUO"
 description              : &description "personal description"
 url                      : "https://xiaonan-debug.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
