--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Xiaonan LUO"
-  avatar           : "profile.png"
+  avatar           : "photo.jpg"
   bio              : "Undergrad at HKUST"
   email            : "xluobd@connect.ust.hk"
   bitbucket        :
@@ -96,7 +96,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/xiaonan-luo-3238ba205/"
+  linkedin         : "xiaonan-luo-3238ba205/"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
