--- a/_config.yml
+++ b/_config.yml
@@ -82,15 +82,15 @@ analytics:
 author:
   name             : "Xiaonan LUO"
   avatar           : "photo.jpg"
-  bio              : "Undergrad at HKUST"
-  email            : "xluobd@connect.ust.hk"
+  bio              : "Graduate Student in Computer Science at Notre Dame"
+  email            : "xluo6@nd.edu"
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
   facebook         :
   foursquare       :
-  github           : "Xiaonan-debug"
+  github           : #"Xiaonan-debug"
   google_plus      :
   keybase          :
   instagram        :
